test/logs.txt
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:152:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> >', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(this->_root), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:439:48: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:453:102: note: in instantiation of function template specialization 'ft::operator<<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../system/../../../red_black_tree.tpp:104:15: note: 'minimum' declared here
        Node* minimum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:156:72: error: no matching constructor for initialization of 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::iterator' (aka 'rbtiterator<int>')
        const_iterator          end()       const   {__INFOIT__ return iterator(this->_nul, this); };
                                                                       ^        ~~~~~~~~~~~~~~~~
../set_tests/../../../set.tpp:439:61: note: in instantiation of member function 'ft::set<int, std::__1::less<int>, std::__1::allocator<int> >::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:453:102: note: in instantiation of function template specialization 'ft::operator<<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, std::__1::less<int>, std::__1::allocator<int> >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                 ^
../set_tests/../system/../../../red_black_tree.tpp:472:18: note: candidate constructor not viable: no known conversion from 'const ft::set<int, std::__1::less<int>, std::__1::allocator<int> > *' to 'ft::RedBlackTree<int, Node> *' (aka 'RedBlackTree<int, nodeSet<int> > *') for 2nd argument
        explicit rbtiterator(Node* tmp, ft::RedBlackTree<Key, Node>* _tree) : _node(tmp), _tree(_tree){};
                 ^
../set_tests/../system/../../../red_black_tree.tpp:474:9: note: candidate constructor not viable: requires single argument 'other', but 2 arguments were provided
        rbtiterator(const rbtiterator &other) : _node(other._node) , _tree(other._tree){};
        ^
../set_tests/../system/../../../red_black_tree.tpp:470:9: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
        rbtiterator() : _node(nullptr), _tree(nullptr){};
        ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:152:81: error: 'this' argument to member function 'minimum' has type 'const ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >', but function is not marked const
        const_iterator          begin()     const   {__INFOIT__ return iterator(this->minimum(this->_root), this); };
                                                                                ^~~~
../set_tests/../../../set.tpp:439:48: note: in instantiation of member function 'ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >::begin' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                               ^
../set_tests/../../../set.tpp:453:102: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../system/../../../red_black_tree.tpp:104:15: note: 'minimum' declared here
        Node* minimum(Node* node) {
              ^
In file included from ../set_tests/operator >=.cpp:2:
In file included from ../set_tests/__service.ipp:3:
../set_tests/../../../set.tpp:156:72: error: no matching constructor for initialization of 'ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >::iterator' (aka 'rbtiterator<std::__1::basic_string<char> >')
        const_iterator          end()       const   {__INFOIT__ return iterator(this->_nul, this); };
                                                                       ^        ~~~~~~~~~~~~~~~~
../set_tests/../../../set.tpp:439:61: note: in instantiation of member function 'ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >::end' requested here
        return ft::lexicographical_compare(lhs.begin(), lhs.end(),
                                                            ^
../set_tests/../../../set.tpp:453:102: note: in instantiation of function template specialization 'ft::operator<<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
                            const ft::set< Key, Compare, Allocator >& rhs ) {__INFONM__ return !(lhs < rhs); };
                                                                                                     ^
../set_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > >' requested here
        result2.push_back(st.st1 >= st.st1); result2.push_back(st.st3 >= st.st3); result2.push_back(st.st5 >= st.st9);
                                                                                                           ^
../set_tests/../system/../../../red_black_tree.tpp:472:18: note: candidate constructor not viable: no known conversion from 'const ft::set<std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<std::__1::basic_string<char> > > *' to 'ft::RedBlackTree<basic_string<char>, Node> *' (aka 'RedBlackTree<std::__1::basic_string<char>, nodeSet<std::__1::basic_string<char> > > *') for 2nd argument
        explicit rbtiterator(Node* tmp, ft::RedBlackTree<Key, Node>* _tree) : _node(tmp), _tree(_tree){};
                 ^
../set_tests/../system/../../../red_black_tree.tpp:474:9: note: candidate constructor not viable: requires single argument 'other', but 2 arguments were provided
        rbtiterator(const rbtiterator &other) : _node(other._node) , _tree(other._tree){};
        ^
../set_tests/../system/../../../red_black_tree.tpp:470:9: note: candidate constructor not viable: requires 0 arguments, but 2 were provided
        rbtiterator() : _node(nullptr), _tree(nullptr){};
        ^
4 errors generated.
                                              ^
../set_tests/equal_range().cpp:52:68: note: in instantiation of function template specialization 'equal_range_test<int>' requested here
    exit(run_set_unit_test<int>("equal_range()", equal_range_test, equal_range_test));
                                                                   ^
../set_tests/../system/../../../red_black_tree.tpp:474:9: note: candidate constructor not viable: no known conversion from 'ft::nodeSet<int> *' to 'const ft::rbtiterator<int>' for 1st argument
        rbtiterator(const rbtiterator &other) : _node(other._node) , _tree(other._tree){};
        ^
../set_tests/../system/../../../red_black_tree.tpp:470:9: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
        rbtiterator() : _node(nullptr), _tree(nullptr){};
        ^
../set_tests/../system/../../../red_black_tree.tpp:472:18: note: candidate constructor not viable: requires 2 arguments, but 1 was provided
        explicit rbtiterator(Node* tmp, ft::RedBlackTree<Key, Node>* _tree) : _node(tmp), _tree(_tree){};
                 ^
6 errors generated.
